--- a/frontend/src/styling/dialogs/_create-game.scss
+++ b/frontend/src/styling/dialogs/_create-game.scss
@@ -19,7 +19,7 @@
 
   .bingo-fields .bingo-field-container {
     display: flex;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 
     .actions {
       display: flex;
